# bigint

./: CMakeLists.txt  bigint.cu  bigint.h
CuBigInt/src/: bigint.cu
benchmarks/: bench_main.cu
tests/: test_cpu.cu  test_gpu.cu
